A script was added to identify doublicate fasta sequence in a collection of fasta sequences

--- a/develop/PDBSinJupyter/TestViz.ipynb
+++ b/develop/PDBSinJupyter/TestViz.ipynb
@@ -2,7 +2,57 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<script>\n",
+       "code_show=true; \n",
+       "function code_toggle() {\n",
+       " if (code_show){\n",
+       " $('div.input').hide();\n",
+       " } else {\n",
+       " $('div.input').show();\n",
+       " }\n",
+       " code_show = !code_show\n",
+       "} \n",
+       "$( document ).ready(code_toggle);\n",
+       "</script>\n",
+       "The raw code for this IPython notebook is by default hidden for easier reading.\n",
+       "To toggle on/off the raw code, click <a href=\"javascript:code_toggle()\">here</a>."
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from IPython.display import HTML\n",
+    "HTML('''<script>\n",
+    "code_show=true; \n",
+    "function code_toggle() {\n",
+    " if (code_show){\n",
+    " $('div.input').hide();\n",
+    " } else {\n",
+    " $('div.input').show();\n",
+    " }\n",
+    " code_show = !code_show\n",
+    "} \n",
+    "$( document ).ready(code_toggle);\n",
+    "</script>\n",
+    "The raw code for this IPython notebook is by default hidden for easier reading.\n",
+    "To toggle on/off the raw code, click <a href=\"javascript:code_toggle()\">here</a>.''')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -13,12 +63,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: ipywidgets==5.2.2 in /Users/pgreisen/anaconda2/lib/python2.7/site-packages\r\n",
-      "Requirement already satisfied: traitlets>=4.2.1 in /Users/pgreisen/anaconda2/lib/python2.7/site-packages (from ipywidgets==5.2.2)\r\n",
-      "Requirement already satisfied: ipython>=4.0.0 in /Users/pgreisen/anaconda2/lib/python2.7/site-packages (from ipywidgets==5.2.2)\r\n",
-      "Requirement already satisfied: widgetsnbextension>=1.2.6 in /Users/pgreisen/anaconda2/lib/python2.7/site-packages (from ipywidgets==5.2.2)\r\n",
-      "Requirement already satisfied: ipykernel>=4.2.2 in /Users/pgreisen/anaconda2/lib/python2.7/site-packages (from ipywidgets==5.2.2)\r\n",
-      "Requirement already satisfied: notebook>=4.4.1 in /Users/pgreisen/anaconda2/lib/python2.7/site-packages (from widgetsnbextension>=1.2.6->ipywidgets==5.2.2)\r\n"
+      "Requirement already satisfied: ipywidgets==5.2.2 in /Users/pgreisen/anaconda2/lib/python2.7/site-packages\n",
+      "Requirement already satisfied: traitlets>=4.2.1 in /Users/pgreisen/anaconda2/lib/python2.7/site-packages (from ipywidgets==5.2.2)\n",
+      "Requirement already satisfied: ipython>=4.0.0 in /Users/pgreisen/anaconda2/lib/python2.7/site-packages (from ipywidgets==5.2.2)\n",
+      "Requirement already satisfied: widgetsnbextension>=1.2.6 in /Users/pgreisen/anaconda2/lib/python2.7/site-packages (from ipywidgets==5.2.2)\n",
+      "Requirement already satisfied: ipykernel>=4.2.2 in /Users/pgreisen/anaconda2/lib/python2.7/site-packages (from ipywidgets==5.2.2)\n",
+      "Requirement already satisfied: notebook>=4.4.1 in /Users/pgreisen/anaconda2/lib/python2.7/site-packages (from widgetsnbextension>=1.2.6->ipywidgets==5.2.2)\n"
      ]
     }
    ],
@@ -31,7 +81,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {
     "extensions": {
      "jupyter_dashboards": {
@@ -56,11 +115,33 @@
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "The installed widget Javascript is the wrong version.\n"
-     ]
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7ead4f7033cc406c91ae7ec0b5776177",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/html": [
+       "<p>Failed to display Jupyter Widget of type <code>NGLWidget</code>.</p>\n",
+       "<p>\n",
+       "  If you're reading this message in Jupyter Notebook or JupyterLab, it may mean\n",
+       "  that the widgets JavaScript is still loading. If this message persists, it\n",
+       "  likely means that the widgets JavaScript library is either not installed or\n",
+       "  not enabled. See the <a href=\"https://ipywidgets.readthedocs.io/en/stable/user_install.html\">Jupyter\n",
+       "  Widgets Documentation</a> for setup instructions.\n",
+       "</p>\n",
+       "<p>\n",
+       "  If you're reading this message in another notebook frontend (for example, a static\n",
+       "  rendering on GitHub or <a href=\"https://nbviewer.jupyter.org/\">NBViewer</a>),\n",
+       "  it may mean that your frontend doesn't currently support widgets.\n",
+       "</p>\n"
+      ],
+      "text/plain": [
+       "NGLWidget()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -76,6 +157,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "extensions": {
      "jupyter_dashboards": {
       "version": 1,
@@ -114,6 +196,7 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "skip"
     }
