Updating scripts and debugging second

--- a/jupyternotebook/GremlinAnalysis/test_papermill/gremlin_analysis.ipynb
+++ b/jupyternotebook/GremlinAnalysis/test_papermill/gremlin_analysis.ipynb
@@ -2,14 +2,32 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "papermill": {
+     "duration": 0.014267,
+     "end_time": "2019-01-02T20:47:02.203850",
+     "exception": false,
+     "start_time": "2019-01-02T20:47:02.189583",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "source": [
     "# Analysis of output from Gremlin"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "papermill": {
+     "duration": 0.008559,
+     "end_time": "2019-01-02T20:47:02.221119",
+     "exception": false,
+     "start_time": "2019-01-02T20:47:02.212560",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "source": [
     "All scores above 0 are taken compared with the WT pairs. All G,P,C -> X mutations are removed from the analysis to limit the number of mutations in the final combination.\n",
     "The cutoff is computed as mean + 2*std "
@@ -18,7 +36,16 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "papermill": {
+     "duration": 1.020985,
+     "end_time": "2019-01-02T20:47:03.250556",
+     "exception": false,
+     "start_time": "2019-01-02T20:47:02.229571",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "import datetime\n",
@@ -35,19 +62,56 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
+    "papermill": {
+     "duration": 0.013896,
+     "end_time": "2019-01-02T20:47:03.273036",
+     "exception": false,
+     "start_time": "2019-01-02T20:47:03.259140",
+     "status": "completed"
+    },
     "tags": [
      "parameters"
     ]
    },
    "outputs": [],
    "source": [
-    "inputfile = \"1542451026.re1.txt\""
+    "inputfile = \"test.txt\""
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "papermill": {
+     "duration": 0.014157,
+     "end_time": "2019-01-02T20:47:03.296211",
+     "exception": false,
+     "start_time": "2019-01-02T20:47:03.282054",
+     "status": "completed"
+    },
+    "tags": [
+     "injected-parameters"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "# Parameters\n",
+    "inputfile = \"1542451026.re1.txt\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "papermill": {
+     "duration": 0.024987,
+     "end_time": "2019-01-02T20:47:03.330386",
+     "exception": false,
+     "start_time": "2019-01-02T20:47:03.305399",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# Getting the input amino acid sequence\n",
@@ -60,8 +124,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "papermill": {
+     "duration": 0.112146,
+     "end_time": "2019-01-02T20:47:03.451617",
+     "exception": false,
+     "start_time": "2019-01-02T20:47:03.339471",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "df = pd.read_csv(inputfile,skiprows=1,delim_whitespace=True)"
@@ -69,8 +142,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "papermill": {
+     "duration": 4.57463,
+     "end_time": "2019-01-02T20:47:08.034949",
+     "exception": false,
+     "start_time": "2019-01-02T20:47:03.460319",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "covariance = {}\n",
@@ -92,8 +174,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "papermill": {
+     "duration": 0.01996,
+     "end_time": "2019-01-02T20:47:08.063581",
+     "exception": false,
+     "start_time": "2019-01-02T20:47:08.043621",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "def get_lowest_scores(dataframe,key_w_aa):\n",
@@ -133,8 +224,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "papermill": {
+     "duration": 1.270632,
+     "end_time": "2019-01-02T20:47:09.343461",
+     "exception": false,
+     "start_time": "2019-01-02T20:47:08.072829",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "dfs = []\n",
@@ -150,8 +250,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "papermill": {
+     "duration": 0.200637,
+     "end_time": "2019-01-02T20:47:09.552938",
+     "exception": false,
+     "start_time": "2019-01-02T20:47:09.352301",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "dftot[\"Diff_score\"] = dftot[\"GremlinScore\"] - dftot[\"WTscore\"]"
@@ -159,8 +268,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
+   "execution_count": 10,
+   "metadata": {
+    "papermill": {
+     "duration": 0.019567,
+     "end_time": "2019-01-02T20:47:09.581579",
+     "exception": false,
+     "start_time": "2019-01-02T20:47:09.562012",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# remove all G,P,C -> X\n",
@@ -170,8 +288,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
+   "execution_count": 11,
+   "metadata": {
+    "papermill": {
+     "duration": 0.025514,
+     "end_time": "2019-01-02T20:47:09.616308",
+     "exception": false,
+     "start_time": "2019-01-02T20:47:09.590794",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -279,7 +406,7 @@
        "43      1  I    232     A    258  I         0.67    -0.3       0.97"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -290,8 +417,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
+   "execution_count": 12,
+   "metadata": {
+    "papermill": {
+     "duration": 0.016143,
+     "end_time": "2019-01-02T20:47:09.641777",
+     "exception": false,
+     "start_time": "2019-01-02T20:47:09.625634",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "dftot = dftot[dftot[\"GremlinScore\"] > 0]"
@@ -299,8 +435,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
+   "execution_count": 13,
+   "metadata": {
+    "papermill": {
+     "duration": 0.01875,
+     "end_time": "2019-01-02T20:47:09.669751",
+     "exception": false,
+     "start_time": "2019-01-02T20:47:09.651001",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -329,16 +474,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
+   "execution_count": 14,
+   "metadata": {
+    "papermill": {
+     "duration": 0.275971,
+     "end_time": "2019-01-02T20:47:09.955343",
+     "exception": false,
+     "start_time": "2019-01-02T20:47:09.679372",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1a0e811470>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x110be32b0>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -359,8 +513,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
+   "execution_count": 15,
+   "metadata": {
+    "papermill": {
+     "duration": 0.01542,
+     "end_time": "2019-01-02T20:47:09.980805",
+     "exception": false,
+     "start_time": "2019-01-02T20:47:09.965385",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "cutoff = dftot[\"Diff_score\"].mean()+2*dftot[\"Diff_score\"].std()"
@@ -368,8 +531,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
+   "execution_count": 16,
+   "metadata": {
+    "papermill": {
+     "duration": 0.027923,
+     "end_time": "2019-01-02T20:47:10.019275",
+     "exception": false,
+     "start_time": "2019-01-02T20:47:09.991352",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -698,7 +870,7 @@
        "631      0  P    417     K    420  A         0.79   -0.44       1.23"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -710,8 +882,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
+   "execution_count": 17,
+   "metadata": {
+    "papermill": {
+     "duration": 0.01774,
+     "end_time": "2019-01-02T20:47:10.047917",
+     "exception": false,
+     "start_time": "2019-01-02T20:47:10.030177",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -727,8 +908,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
+   "execution_count": 18,
+   "metadata": {
+    "papermill": {
+     "duration": 0.017249,
+     "end_time": "2019-01-02T20:47:10.075935",
+     "exception": false,
+     "start_time": "2019-01-02T20:47:10.058686",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# write to muts.txt\n",
@@ -739,8 +929,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
+   "execution_count": 19,
+   "metadata": {
+    "papermill": {
+     "duration": 0.021021,
+     "end_time": "2019-01-02T20:47:10.107807",
+     "exception": false,
+     "start_time": "2019-01-02T20:47:10.086786",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# generate mutation file for ddG cartesian\n",
@@ -754,7 +953,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "papermill": {
+     "duration": 0.010876,
+     "end_time": "2019-01-02T20:47:10.131350",
+     "exception": false,
+     "start_time": "2019-01-02T20:47:10.120474",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": []
   }
@@ -777,6 +985,19 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.6.5"
+  },
+  "papermill": {
+   "duration": 9.488209,
+   "end_time": "2019-01-02T20:47:10.979365",
+   "environment_variables": {},
+   "exception": null,
+   "input_path": "20181202_GremlinAnalysis_Library.ipynb",
+   "output_path": "gremlin_analysis.ipynb",
+   "parameters": {
+    "inputfile": "1542451026.re1.txt"
+   },
+   "start_time": "2019-01-02T20:47:01.491156",
+   "version": "0.16.2"
   }
  },
  "nbformat": 4,
