Updating scripts and debugging second

--- a/jupyternotebook/PSSMAnalysis/debug/20180313_PSSM_analysis.ipynb
+++ b/jupyternotebook/PSSMAnalysis/debug/20180313_PSSM_analysis.ipynb
@@ -305,11 +305,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(str(date)+\"_stabilization_phylogenic.csv\",'w') as f:\n",
+    "with open(date+\"_stabilization_phylogenic.csv\",'w') as f:\n",
     "    f.write(\"WT,Pos,AA,WT_score,AA_score,Diff_score\\n\")\n",
     "    for line in dffs:\n",
     "        f.write(line+\"\\n\")\n",
-    "df_.to_excel(str(date)+\"_PSSM_analysis.xlsx\")"
+    "df_.to_excel(date+\"_PSSM_analysis.xlsx\")"
    ]
   },
   {
@@ -339,7 +339,7 @@
     }
    ],
    "source": [
-    "df_pssm_result = pd.read_csv(str(date)+\"_stabilization_phylogenic.csv\")\n",
+    "df_pssm_result = pd.read_csv(date+\"_stabilization_phylogenic.csv\")\n",
     "df_pssm_result.plot(y=\"Diff_score\",kind='hist')"
    ]
   },
@@ -484,7 +484,7 @@
     }
    ],
    "source": [
-    "print(\"Number of amino acid substitutions: \",len(df_pssm_result.index ))"
+    "print(\"Number of amino acid substitutions: \",len(df_pssm_result.index )"
    ]
   },
   {
