--- a/jupyternotebook/PSSMAnalysis/debug/pssm_analysis.ipynb
+++ b/jupyternotebook/PSSMAnalysis/debug/pssm_analysis.ipynb
@@ -13,24 +13,10 @@
     "tags": []
    },
    "source": [
-    "# Analysis of output from Gremlin"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "papermill": {
-     "duration": null,
-     "end_time": null,
-     "exception": null,
-     "start_time": null,
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "source": [
-    "All scores above 0 are taken compared with the WT pairs. All G,P,C -> X mutations are removed from the analysis to limit the number of mutations in the final combination.\n",
-    "The cutoff is computed as mean + 2*std "
+    "# Analysis of PSSM results\n",
+    "After running the psiblast on the input fasta-file. The difference between the WT amino acid and substitutions observed during the evolution is computed. \n",
+    "Again, G and P are removed as potential substitutions from the WT sequence and mutations to G and C as well. \n",
+    "A cutoff is computed as being significant using the mean of the difference score with 2 standard deviations. "
    ]
   },
   {
@@ -48,14 +34,8 @@
    },
    "outputs": [],
    "source": [
-    "import datetime\n",
-    "import numpy as np\n",
-    "import seaborn as sns\n",
     "import pandas as pd\n",
-    "import plotly.graph_objs as go\n",
-    "import plotly.plotly as py\n",
-    "from ipywidgets import widgets\n",
-    "from IPython.display import display, clear_output, Image"
+    "import seaborn as sns"
    ]
   },
   {
@@ -75,7 +55,7 @@
    },
    "outputs": [],
    "source": [
-    "inputfile = \"1542451026.re1.txt\""
+    "date = \"20181204\""
    ]
   },
   {
@@ -96,7 +76,7 @@
    "outputs": [],
    "source": [
     "# Parameters\n",
-    "inputfile = \"1545972452.re1.txt\"\n"
+    "date = 20\n"
    ]
   },
   {
@@ -114,12 +94,11 @@
    },
    "outputs": [],
    "source": [
-    "# Getting the input amino acid sequence\n",
-    "aa_seq = \"\"\n",
-    "with open(inputfile,'r') as f:\n",
-    "    for line in f:\n",
-    "        if(len(line) > 1 and line[0:2] == \"#S\"):\n",
-    "           aa_seq = line.split()[1]"
+    "df_ = pd.read_csv(\"ascii_mtx_file\",skiprows=2,skip_blank_lines=True,  delim_whitespace=True,header=0,\n",
+    "                  names=[\"WT\",u'A', u'R', u'N', u'D', u'C', u'Q', u'E', u'G', u'H', u'I', u'L', u'K',\n",
+    "       u'M', u'F', u'P', u'S', u'T', u'W', u'Y', u'V', u'A.1', u'R.1', u'N.1',\n",
+    "       u'D.1', u'C.1', u'Q.1', u'E.1', u'G.1', u'H.1', u'I.1', u'L.1', u'K.1',\n",
+    "       u'M.1', u'F.1', u'P.1', u'S.1', u'T.1', u'W.1', u'Y.1', u'V.1',\"S1\",\"S2\"]) # ,nrows=234)"
    ]
   },
   {
@@ -137,7 +116,8 @@
    },
    "outputs": [],
    "source": [
-    "df = pd.read_csv(inputfile,skiprows=1,delim_whitespace=True)"
+    "df_ = df_.dropna()\n",
+    "df_ = df_[df_[\"WT\"] != '*']"
    ]
   },
   {
@@ -155,21 +135,9 @@
    },
    "outputs": [],
    "source": [
-    "covariance = {}\n",
-    "cutoff = 1\n",
-    "true_ = 0\n",
-    "for i,j in zip(df.index, df['##']):\n",
-    "    if( ( len(j.split(\"_\")) ==  3)  & (j.split(\"_\")[-1] == 'X') ):\n",
-    "        name = j+\"_\"+str(df.iloc[i,3])\n",
-    "        covariance[name] = {}\n",
-    "        true_ = 1\n",
-    "    elif(true_ == 1):\n",
-    "        tmpid = df.iloc[i,0]\n",
-    "        covariance[name][tmpid] = []\n",
-    "        covariance[name][tmpid] = list(df.iloc[i,1:])\n",
-    "        #covariance[name].append(tmpdict)\n",
-    "    else:\n",
-    "        continue"
+    "df_[\"WT_score\"] = 0.0\n",
+    "for index, row in df_.iterrows():\n",
+    "    df_.loc[index,\"WT_score\"] = df_.loc[index,df_.loc[index,\"WT\"]]"
    ]
   },
   {
@@ -187,39 +155,15 @@
    },
    "outputs": [],
    "source": [
-    "def get_lowest_scores(dataframe,key_w_aa):\n",
-    "    # position, WT, AA, score\n",
-    "    columns = [\"WT\",\"WT_Pos\",\"AA_WT\",\"AA_Pos\",\"AA\",\"GremlinScore\",\"WTscore\"]\n",
-    "    aa1,aa2,chain,score = key_w_aa.split(\"_\")\n",
-    "    aa1 = int(aa1.lstrip(\"0\"))\n",
-    "    aa2 = int(aa2.lstrip(\"0\"))\n",
-    "    cutoff = dataframe.loc[aa_seq[aa1-1],aa_seq[aa2-1]]\n",
-    "    a = dataframe.loc[aa_seq[aa1-1], dataframe.loc[aa_seq[aa1-1],:] > cutoff]\n",
-    "    b = dataframe.loc[dataframe.loc[:,aa_seq[aa2-1]] > cutoff, aa_seq[aa2-1]]\n",
-    "    df = pd.DataFrame(index=range(0,len(a.index)+len(b.index)), columns=columns)\n",
-    "    dummy = 0\n",
-    "    for i in a.index:\n",
-    "        df.iloc[dummy,df.columns.get_loc(\"WT\")] = aa_seq[aa1-1]\n",
-    "        df.iloc[dummy,df.columns.get_loc(\"WT_Pos\")] = aa1\n",
-    "        df.iloc[dummy,df.columns.get_loc(\"AA_WT\")] = aa_seq[aa2-1]\n",
-    "        df.iloc[dummy,df.columns.get_loc(\"AA\")] = i\n",
-    "        df.iloc[dummy,df.columns.get_loc(\"AA_Pos\")] = aa2\n",
-    "        df.iloc[dummy,df.columns.get_loc(\"GremlinScore\")] = a[i]\n",
-    "        df.iloc[dummy,df.columns.get_loc(\"WTscore\")] = cutoff\n",
-    "        dummy += 1\n",
-    "        \n",
-    "    for i in b.index:\n",
-    "        df.iloc[dummy,df.columns.get_loc(\"WT\")] = aa_seq[aa2-1]\n",
-    "        df.iloc[dummy,df.columns.get_loc(\"WT_Pos\")] = aa2\n",
-    "        df.iloc[dummy,df.columns.get_loc(\"AA_WT\")] = aa_seq[aa1-1]\n",
-    "        df.iloc[dummy,df.columns.get_loc(\"AA\")] = i\n",
-    "        df.iloc[dummy,df.columns.get_loc(\"AA_Pos\")] = aa1\n",
-    "        df.iloc[dummy,df.columns.get_loc(\"GremlinScore\")] = b[i]\n",
-    "        df.iloc[dummy,df.columns.get_loc(\"WTscore\")] = cutoff\n",
-    "        dummy += 1\n",
-    "    return df\n",
-    "                    \n",
-    "    "
+    "df_.head()\n",
+    "cols = [u'WT',u'A',u'R',        u'N',        u'D',\n",
+    "              u'C',        u'Q',        u'E',        u'G',        u'H',\n",
+    "              u'I',        u'L',        u'K',        u'M',        u'F',\n",
+    "              u'P',        u'S',        u'T',        u'W',        u'Y',\n",
+    "              u'V',     u'WT_score']\n",
+    "df_ = df_[cols]\n",
+    "df_.WT_score = df_.WT_score.astype(int)\n",
+    "df_.head()"
    ]
   },
   {
@@ -237,15 +181,20 @@
    },
    "outputs": [],
    "source": [
-    "dfs = []\n",
-    "# loop over all the keys\n",
-    "for key in covariance.keys():\n",
-    "    if( float(key.split('_')[-1]) >  0.99 ):\n",
-    "        tmpdf = pd.DataFrame.from_dict(covariance[key], orient='index',columns=[\"A\",\"F\",\"I\",\"L\",\"V\",\"M\",\"W\",\"Y\",\"D\",\"E\",\"K\",\"R\",\"H\",\"N\",\"Q\",\"S\",\"T\",\"G\",\"P\",\"C\"])\n",
-    "        tmpdf.index = [\"A\",\"F\",\"I\",\"L\",\"V\",\"M\",\"W\",\"Y\",\"D\",\"E\",\"K\",\"R\",\"H\",\"N\",\"Q\",\"S\",\"T\",\"G\",\"P\",\"C\"]\n",
-    "        dfs.append( get_lowest_scores(tmpdf,key) )\n",
-    "dftot = pd.concat(dfs)\n",
-    "dftot.reset_index(inplace=True)"
+    "# WT, Pos, AA, WT_score, AA_score, Diff_score\n",
+    "dffs = []\n",
+    "for index,row in df_.iterrows():\n",
+    "    for j in range(len(row)):\n",
+    "        if(j == 0):\n",
+    "            continue\n",
+    "        elif(df_.columns[j] == \"WT_score\"):\n",
+    "            continue\n",
+    "        elif(df_.columns[j] ==  df_.loc[index,\"WT\"] ):\n",
+    "            continue\n",
+    "        elif( row[j] > df_.loc[index,\"WT_score\"]):\n",
+    "            val_ = str( abs( df_.loc[index,\"WT_score\"] - row[j]  ) )\n",
+    "            tmp_ = df_.loc[index,\"WT\"]+\",\"+str(index)+\",\"+df_.columns[j]+\",\"+str(df_.loc[index,\"WT_score\"])+\",\"+str(row[j])+\",\"+val_\n",
+    "            dffs.append(tmp_)"
    ]
   },
   {
@@ -263,7 +212,30 @@
    },
    "outputs": [],
    "source": [
-    "dftot[\"Diff_score\"] = dftot[\"GremlinScore\"] - dftot[\"WTscore\"]"
+    "with open(date+\"_stabilization_phylogenic.csv\",'w') as f:\n",
+    "    f.write(\"WT,Pos,AA,WT_score,AA_score,Diff_score\\n\")\n",
+    "    for line in dffs:\n",
+    "        f.write(line+\"\\n\")\n",
+    "df_.to_excel(date+\"_PSSM_analysis.xlsx\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "papermill": {
+     "duration": null,
+     "end_time": null,
+     "exception": null,
+     "start_time": null,
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "df_pssm_result = pd.read_csv(date+\"_stabilization_phylogenic.csv\")\n",
+    "df_pssm_result.plot(y=\"Diff_score\",kind='hist')"
    ]
   },
   {
@@ -282,8 +254,8 @@
    "outputs": [],
    "source": [
     "# remove all G,P,C -> X\n",
-    "dftot = dftot[(dftot[\"AA_WT\"] != 'G') & (dftot[\"AA_WT\"] != 'P') & \\\n",
-    "                               (dftot[\"AA\"] != 'G') & (dftot[\"AA\"] != 'C')]"
+    "df_pssm_result = df_pssm_result[(df_pssm_result[\"WT\"] != 'G') & (df_pssm_result[\"WT\"] != 'P') & \\\n",
+    "                               (df_pssm_result[\"AA\"] != 'G') & (df_pssm_result[\"AA\"] != 'C')]"
    ]
   },
   {
@@ -301,7 +273,8 @@
    },
    "outputs": [],
    "source": [
-    "dftot.head()"
+    "# get median of values\n",
+    "sns.boxplot(y=\"Diff_score\",data=df_pssm_result)"
    ]
   },
   {
@@ -319,7 +292,7 @@
    },
    "outputs": [],
    "source": [
-    "dftot = dftot[dftot[\"GremlinScore\"] > 0]"
+    "df_pssm_result.info()"
    ]
   },
   {
@@ -337,7 +310,7 @@
    },
    "outputs": [],
    "source": [
-    "dftot.info()"
+    "cutoff = df_pssm_result[\"Diff_score\"].mean()+2*df_pssm_result[\"Diff_score\"].std()"
    ]
   },
   {
@@ -355,7 +328,8 @@
    },
    "outputs": [],
    "source": [
-    "dftot.plot(y=\"Diff_score\",kind='hist')"
+    "df_pssm_result = df_pssm_result[df_pssm_result[\"Diff_score\"] > cutoff]\n",
+    "df_pssm_result.info()"
    ]
   },
   {
@@ -373,7 +347,7 @@
    },
    "outputs": [],
    "source": [
-    "cutoff = dftot[\"Diff_score\"].mean()+2*dftot[\"Diff_score\"].std()"
+    "print(\"Unique positions: \",len(df_pssm_result[\"Pos\"].unique()) )"
    ]
   },
   {
@@ -391,26 +365,7 @@
    },
    "outputs": [],
    "source": [
-    "dftot = dftot[dftot[\"Diff_score\"] > cutoff]\n",
-    "dftot.sort_values(by=\"GremlinScore\",ascending=False).head(30)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "papermill": {
-     "duration": null,
-     "end_time": null,
-     "exception": null,
-     "start_time": null,
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "print(\"Unique positions: \",len(dftot[\"WT_Pos\"].unique()) )"
+    "print(\"Number of amino acid substitutions: \",len(df_pssm_result.index )"
    ]
   },
   {
@@ -430,7 +385,7 @@
    "source": [
     "# write to muts.txt\n",
     "with open(\"muts.txt\", 'w') as f:\n",
-    "    for i,j,k in zip(dftot.AA_WT, dftot.AA_Pos,dftot.AA):\n",
+    "    for i,j,k in zip(df_pssm_result.WT, df_pssm_result.Pos,df_pssm_result.AA):\n",
     "        f.write(i+str(j)+k+'\\n')"
    ]
   },
@@ -449,29 +404,8 @@
    },
    "outputs": [],
    "source": [
-    "# generate mutation file for ddG cartesian\n",
-    "header=\"total 1\\n1\\n\"\n",
-    "for i,j,k in zip(dftot.AA_WT, dftot.AA_Pos,dftot.AA):\n",
-    "    with open(i+str(j)+k+\".mutfile\",'w') as f:\n",
-    "        f.write(header)\n",
-    "        f.write(i+\" \"+str(j)+\" \"+k)"
+    "!python /Users/pgreisen/pythonscripts/develop/convert_pssm_to_csv/convert_pssm_to_csv.py ascii_mtx_file"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "papermill": {
-     "duration": null,
-     "end_time": null,
-     "exception": null,
-     "start_time": null,
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -491,20 +425,30 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   },
   "papermill": {
-   "duration": 0.011308,
-   "end_time": "2019-01-03T06:57:25.802782",
+   "duration": 0.009838,
+   "end_time": "2019-01-03T06:59:33.850862",
    "environment_variables": {},
    "exception": null,
-   "input_path": "20181202_GremlinAnalysis_Library.ipynb",
-   "output_path": "gremlin_analysis.ipynb",
+   "input_path": "/Users/pgreisen/pythonscripts/jupyternotebook/PSSMAnalysis/20180313_PSSM_analysis.ipynb",
+   "output_path": "pssm_analysis.ipynb",
    "parameters": {
-    "inputfile": "1545972452.re1.txt"
+    "date": 20
    },
-   "start_time": "2019-01-03T06:57:25.791474",
+   "start_time": "2019-01-03T06:59:33.841024",
    "version": "0.16.2"
+  },
+  "toc": {
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": "block",
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
